OpenRewrite recipe best practices
Co-authored-by: Moderne <team@moderne.io>